# IQ0-q

./: .gitignore  .gitmodules  .mypy.ini  README.md  minimal_config.cfg  mypy.ini  nv_simulator_config.cfg  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.py  run_optical_tests.py  setup.py  simplified_config.cfg  start_nv_simulator.py
.github/workflows/: ci.yml  docs-to-wiki.yml
Planung/: NV.md  NV_SIMULATOR_REQUIREMENTS.md  Projektdokumentation.md  QUANTUM_HARDWARE_NETWORK_INTEGRATION.md  QUDI_HARDWARE_COMMUNICATION.md  SIMOS_IMPLEMENTATION.md
Planung/Dokumente/: README.md
Planung/Epics/: E-CORE-01_Physikalisches_Modell.md  E-CORE-02_Simulatorzustandsverwaltung.md  E-QDI-01_Mikrowellen_Interface.md  E-WEB-01_Web_UI_Grundgeruest.md  EPIC_OVERVIEW.md  README.md
Planung/Projektplanung/: SimulationsModell.md
Planung/Umsetzung/: Projektübersicht.md
docs/: Doxyfile  README.md  api_reference.md  conf.py  index.md  physical_model.md  qudi_interface_guide.md  test_docs_conversion.py
examples/: dd_sequences_demo.py  enhanced_experiments.py  quantum_evolution.py  quantum_odmr.py  qudi_integration_demo.py  test_decay.py
fixes/: 1_remove_mocks.py  2_fix_hamiltonian.py  3_fix_thread_safety.py  4_error_handling.py  5_improved_testing.py  README.md
nv/: __init__.py  calibrate_twin.py  config.json  config_loader.py  digital_twin.py  simulator.py
nv/api/: __init__.py  (+4 more)
sim/: README.md  nv_simulator_dummy.cfg  nv_simulator_qudi.cfg  qudi_nv_simulator.cfg  setup.py
src/: __init__.py  model.py
tests/: test_enhanced_experiments.py  test_quantum_evolution.py
(+252 files in other folders)
