[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Behandle import-untyped nicht als Fehler
disallow_untyped_imports = false
# Behandle Skipping analyzing nicht als Fehler
ignore_missing_imports = true
# Reduziere Strenge für untypisierte Importe
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["scipy.*", "scipy"]
ignore_missing_imports = true
follow_imports = "skip"